--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,16 +2,22 @@
   "name": "@saas/api",
   "version": "1.0.0",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/http/server.ts"
   },
   "dependencies": {
-    "@saas/auth": "workspace:*"
+    "@fastify/cors": "^9.0.1",
+    "@prisma/client": "5.13.0",
+    "@saas/auth": "workspace:*",
+    "fastify": "^4.26.2",
+    "fastify-type-provider-zod": "^1.1.9",
+    "zod": "^3.22.5"
   },
   "devDependencies": {
     "@saas/eslint": "workspace:*",
     "@saas/prettier": "workspace:*",
     "@saas/typescript": "workspace:*",
     "@types/node": "^20.12.7",
+    "prisma": "^5.13.0",
     "tsx": "^4.7.2"
   },
   "prettier": "@saas/prettier",
