feat: create seed

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -2,5 +2,13 @@
   "extends": "@saas/typescript/node.json",
   "include": [
     "src/**/*"
-  ]
+  ],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
+  }
 }
