--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,17 +8,23 @@
     "@fastify/cors": "^9.0.1",
     "@prisma/client": "5.13.0",
     "@saas/auth": "workspace:*",
+    "bcryptjs": "^2.4.3",
     "fastify": "^4.26.2",
     "fastify-type-provider-zod": "^1.1.9",
     "zod": "^3.22.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@saas/eslint": "workspace:*",
     "@saas/prettier": "workspace:*",
     "@saas/typescript": "workspace:*",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.12.7",
     "prisma": "^5.13.0",
     "tsx": "^4.7.2"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "prettier": "@saas/prettier",
   "eslintConfig": {
