--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
+    "fastify-plugin": "^4.5.1",
     "fastify-type-provider-zod": "^1.1.9",
     "zod": "^3.22.5"
   },
