--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@saas/typescript/node.json",
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "@types/*.d.ts"
   ],
   "compilerOptions": {
     "baseUrl": ".",
