--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,7 +2,10 @@
   "name": "@saas/api",
   "version": "1.0.0",
   "scripts": {
-    "dev": "tsx watch src/http/server.ts"
+    "env:load": "dotenv -e ../../.env --",
+    "db:migrate": "pnpm env:load prisma migrate dev",
+    "db:studio": "pnpm env:load prisma studio",
+    "dev": "pnpm env:load tsx watch src/http/server.ts"
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
@@ -11,8 +14,8 @@
     "@fastify/swagger-ui": "^3.0.0",
     "@prisma/client": "5.13.0",
     "@saas/auth": "workspace:*",
+    "@saas/env": "workspace:*",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "fastify-plugin": "^4.5.1",
     "fastify-type-provider-zod": "^1.1.9",
@@ -25,6 +28,7 @@
     "@saas/typescript": "workspace:*",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.12.7",
+    "dotenv-cli": "^7.4.1",
     "prisma": "^5.13.0",
     "tsx": "^4.7.2"
   },
